bundles/org.openhab.binding.jellyfin/src/main/java/org/openhab/binding/jellyfin/internal/api/generated/10.10.3/docs/MediaSourceInfo.md


# MediaSourceInfo


## Properties

| Name | Type | Description | Notes |
|------------ | ------------- | ------------- | -------------|
|**protocol** | **MediaProtocol** |  |  [optional] |
|**id** | **String** |  |  [optional] |
|**path** | **String** |  |  [optional] |
|**encoderPath** | **String** |  |  [optional] |
|**encoderProtocol** | **MediaProtocol** |  |  [optional] |
|**type** | **MediaSourceType** |  |  [optional] |
|**container** | **String** |  |  [optional] |
|**size** | **Long** |  |  [optional] |
|**name** | **String** |  |  [optional] |
|**isRemote** | **Boolean** | Gets or sets a value indicating whether the media is remote.  Differentiate internet url vs local network. |  [optional] |
|**etag** | **String** |  |  [optional] |
|**runTimeTicks** | **Long** |  |  [optional] |
|**readAtNativeFramerate** | **Boolean** |  |  [optional] |
|**ignoreDts** | **Boolean** |  |  [optional] |
|**ignoreIndex** | **Boolean** |  |  [optional] |
|**genPtsInput** | **Boolean** |  |  [optional] |
|**supportsTranscoding** | **Boolean** |  |  [optional] |
|**supportsDirectStream** | **Boolean** |  |  [optional] |
|**supportsDirectPlay** | **Boolean** |  |  [optional] |
|**isInfiniteStream** | **Boolean** |  |  [optional] |
|**useMostCompatibleTranscodingProfile** | **Boolean** |  |  [optional] |
|**requiresOpening** | **Boolean** |  |  [optional] |
|**openToken** | **String** |  |  [optional] |
|**requiresClosing** | **Boolean** |  |  [optional] |
|**liveStreamId** | **String** |  |  [optional] |
|**bufferMs** | **Integer** |  |  [optional] |
|**requiresLooping** | **Boolean** |  |  [optional] |
|**supportsProbing** | **Boolean** |  |  [optional] |
|**videoType** | **VideoType** |  |  [optional] |
|**isoType** | **IsoType** |  |  [optional] |
|**video3DFormat** | **Video3DFormat** |  |  [optional] |
|**mediaStreams** | [**List&lt;MediaStream&gt;**](MediaStream.md) |  |  [optional] |
|**mediaAttachments** | [**List&lt;MediaAttachment&gt;**](MediaAttachment.md) |  |  [optional] |
|**formats** | **List&lt;String&gt;** |  |  [optional] |
|**bitrate** | **Integer** |  |  [optional] |
|**fallbackMaxStreamingBitrate** | **Integer** |  |  [optional] |
|**timestamp** | **TransportStreamTimestamp** |  |  [optional] |
|**requiredHttpHeaders** | **Map&lt;String, String&gt;** |  |  [optional] |
|**transcodingUrl** | **String** |  |  [optional] |
|**transcodingSubProtocol** | **MediaStreamProtocol** | Media streaming protocol.  Lowercase for backwards compatibility. |  [optional] |
|**transcodingContainer** | **String** |  |  [optional] |
|**analyzeDurationMs** | **Integer** |  |  [optional] |
|**defaultAudioStreamIndex** | **Integer** |  |  [optional] |
|**defaultSubtitleStreamIndex** | **Integer** |  |  [optional] |
|**hasSegments** | **Boolean** |  |  [optional] |



